add css stylesheet

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+ <link rel="main" href="main.css">
+</head>
+<body>
+
+Hello World!
+
+<h1>This is my website's heading</h1>
+<p> hiiii </p>
+
+</body>
+</html>
