Add Jekyll to site

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
+---
+---
+
 <!DOCTYPE html>
 <html>
-<head>
- <link rel="stylesheet" href="main.css">
-</head>
-<body>
-
-Hello World!
-
-<h1>This is my website's heading</h1>
-<p> hiiii </p>
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>{{ "Hello World!" | downcase }}</h1>
+  </body>
 </html>
